Fix pointer cursor visibility

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@
   justify-content: space-between;
   width: 25%;
   padding: 5px;
+  cursor: pointer;
 }
 
 .text {
@@ -66,7 +67,6 @@
 .img-container {
   max-height: 200px;
   z-index: 1;
-  cursor: pointer;
   transition: transform ease-in 0.2s;
 }
 
@@ -87,7 +87,6 @@
   border: none;
   outline: none;
   z-index: 10;
-  cursor: pointer;
   text-decoration: none;
 }
 
